3822B1FI3/2_integral_oneapi/budazhapova_ekaterina/log.txt
/home/crazyproger/sandbox/oneapi-2026/3822B1FI3/2_integral_oneapi/budazhapova_ekaterina/integral_oneapi.cpp:18:57: error: invalid operands to binary expression ('float' and 'const sycl::handler')
   18 |                            float x = start + (i + 0.5f) * h;
      |                                              ~~~~~~~~~~ ^ ~
/home/crazyproger/sandbox/oneapi-2026/3822B1FI3/2_integral_oneapi/budazhapova_ekaterina/integral_oneapi.cpp:19:57: error: invalid operands to binary expression ('float' and 'const sycl::handler')
   19 |                            float y = start + (j + 0.5f) * h;
      |                                              ~~~~~~~~~~ ^ ~
/home/crazyproger/sandbox/oneapi-2026/3822B1FI3/2_integral_oneapi/budazhapova_ekaterina/integral_oneapi.cpp:15:25: error: call to deleted constructor of 'sycl::handler'
   15 |                        [=](sycl::id<2> idx, auto& sum) {
      |                         ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/handler.hpp:1730:3: note: 'handler' has been explicitly marked deleted here
 1730 |   handler(const handler &) = delete;
      |   ^
/home/crazyproger/sandbox/oneapi-2026/3822B1FI3/2_integral_oneapi/budazhapova_ekaterina/integral_oneapi.cpp:15:24: error: attempt to use a deleted function
   15 |                        [=](sycl::id<2> idx, auto& sum) {
      |                        ^
/home/crazyproger/sandbox/oneapi-2026/3822B1FI3/2_integral_oneapi/budazhapova_ekaterina/integral_oneapi.cpp:18:59: note: destructor of '(lambda at /home/crazyproger/sandbox/oneapi-2026/3822B1FI3/2_integral_oneapi/budazhapova_ekaterina/integral_oneapi.cpp:15:24)' is implicitly deleted because field 'h' has an inaccessible destructor
   18 |                            float x = start + (i + 0.5f) * h;
      |                                                           ^
4 errors generated.
